# batdongsancrawling

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
output/sell-sg/: result.csv  result_20000.csv
src/: batdongsan.py  batdongsan_crawler.py
