[tool.poetry]
name = "batdongsan-crawler"
version = "0.0.1"
description = "Collecting housing market information from batdongsan.com.vn"
authors = []
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
typed-argparse = "^0.2.11"
beautifulsoup4 = "^4.12.2"
pandas = "^2.0.3"
loguru = "^0.7.0"
lxml = "^4.9.2"
numpy = "^1.25.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
batdongsan = "src.batdongsan:main"
